:bug: Prevent extra padding in transaction detail page

--- a/src/components/singleTransactionV2/singleTransactionV2.css
+++ b/src/components/singleTransactionV2/singleTransactionV2.css
@@ -10,7 +10,6 @@
 .wrapper {
   margin: 20px 0 40px;
   padding: 0;
-  width: auto;
   max-width: var(--medium-box-width);
 
   & .txLink {
